# scoreboard-ai

./: .gitignore  CLAUDE.md  CLAUDE_PROMPT_1.md  README.md  docker-compose.yml  index.html  justfile  tailwind.config.ts
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5376a6ff6e77_add_result_columns_to_predictions.py  9cad35c95dd2_add_league_to_predictions.py  b13ae358e498_add_injury_columns_to_predictions.py  c3197ae2009a_initial_tables.py
backend/app/adapters/: api_football_adapter.py  claude_adapter.py  espn_adapter.py  football_data_adapter.py  transfermarkt_adapter.py
backend/app/controllers/: auth_controller.py  betting_slip_controller.py  football_controller.py  prediction_controller.py
backend/app/db/: database.py
backend/app/models/: betting_slip.py  betting_slip_item.py  prediction.py  user.py
backend/app/schemas/: auth_schemas.py  betting_slip_schemas.py  prediction_schemas.py
backend/app/services/: auth_service.py  betting_slip_service.py  football_service.py  prediction_service.py  result_checker_service.py
backend/app/tests/: conftest.py
backend/app/tests/integration/: test_auth_flow.py  test_betting_slip_flow.py  test_prediction_flow.py
backend/app/tests/seeders/: seed_fixtures.py  seed_predictions.py  seed_slips.py  seed_users.py
backend/app/tests/unit/adapters/: test_api_football_adapter.py  test_claude_adapter.py  test_espn_adapter.py  test_football_data_adapter.py  test_transfermarkt_adapter.py
backend/app/tests/unit/controllers/: test_auth_controller.py  (+2 more)
(+35 files in other folders)
